--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,15 @@
 {
+  "manifest_version": 2,
   "name": "SoundCloud Controls",
   "version": "1.0.0",
-  "manifest_version": 2,
+  "default_locale": "en",
+  "description": "SoundCloud Music Player Controls",
   "browser_action": {
     "default_title": "SoundCloud Controls",
     "default_icon": "img/icon.png",
     "default_popup": "popup.html"
   },
+  "author": "Hendry Sadrak <hendry.sadrak@outlook.com> (http://hendrysadrak.com)",
   "permissions": [
     "tabs",
     "*://soundcloud.com/*"
