--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
   "manifest_version": 2,
   "name": "SoundCloud Controls",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "SoundCloud Music Player Controls",
   "browser_action": {
     "default_title": "SoundCloud Controls",
-    "default_icon": "img/icon.png",
+    "default_icon": "img/SoundCloud Controls-01 icon.png",
     "default_popup": "popup.html"
   },
   "author": "Hendry Sadrak <hendry.sadrak@outlook.com> (http://hendrysadrak.com)",
